# plugin_example

./: .gitignore  LICENSE  README.md  requirements.txt  run.py
base/: setup.cfg
base/plugin_example_base/: __init__.py
base/plugin_example_base/plugins/: builtin.py
