[metadata]
name = plugin_example_base
pre_version = 0.0.1
version = 0.0.1
description-file = README.md
author = bunjiboys
author_email = bunjiboys+gh@gmail.com
url = https://github.com/bunjiboys/plugin_example_base
packages = find_packages(exclude=exclude_packages)
package_data = package_data
package_dir = {'plugin_example_base': 'plugin_example_base'}
include_package_data = True
zip_safe = False
install_requires = requires
entry_points = entry_points
license = MIT

[files]
packages =
    plugin_example_base

[entry_points]
plugin_example_base.plugins =
    builtin = plugin_example_base.plugins.builtin:BuiltInPlugin
